ops/storage/longhorn/ing.yaml
# https://argoproj.github.io/argo-cd/operator-manual/ingress/
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: longhorn-system
spec:
  rules:
  - host: longhorn.local-1.vm
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
